# termite

./: .gitignore  .gitmodules  NEWS.md  README.changes.md  README.old.rst  README.rst  config  meson.build  termite.cc  termite.terminfo  tic.sh  url_regex.hh
.github/workflows/: ci.yml
man/: termite.1  termite.config.5
subprojects/: vte.wrap
